--- a/index.html
+++ b/index.html
@@ -79,6 +79,15 @@
       <li><a href="#htu-5">Using Proxy</a></li>
     </ul>
   </li>
+  <li><a href="#env"><strong>📝 ENV Variables</strong></a>
+    <ul>
+      <li><a href="#env-1">Connectivity</a></li>
+      <li><a href="#env-2">Login</a></li>
+      <li><a href="#env-3">File</a></li>
+      <li><a href="#env-4">Behaviour</a></li>
+      <li><a href="#env-5">Misc</a></li>
+    </ul>
+  </li>
   <li><a href="#limits"><strong>🪧 Limits</strong></a>
     <ul>
       <li><a href="#l-1">File Size</a></li>
@@ -428,6 +437,263 @@ pkg install git -y
 
 <p>3.While running tg-upload, just mention the proxy name using <code class="language-plaintext highlighter-rouge">--proxy</code>.</p>
 
+<p><a name="env"></a></p>
+
+<h2 id="-env-variables">📝 ENV Variables</h2>
+
+<p><strong>Tired of passing values each time using flags? With tg-upload, you can get values from the system environment automatically once detected. Each flag has its own unique system environment variable name to get its value from. You don’t need to remember those pesky values ever again! Just set given variables in system environment accordingly, of course you can overwrite them by passing values using flags.</strong></p>
+
+<p><a name="env-1"></a></p>
+
+<p><strong>1.CONNECTIVITY VARS:</strong></p>
+
+<ul>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_IPV6</code> -&gt; <code class="language-plaintext highlighter-rouge">--ipv6</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_PROXY</code> -&gt; <code class="language-plaintext highlighter-rouge">--proxy</code></li>
+</ul>
+
+<p><a name="env-2"></a></p>
+
+<p><strong>2.LOGIN VARS:</strong></p>
+
+<ul>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_PROFILE</code> -&gt; <code class="language-plaintext highlighter-rouge">--profile</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_INFO</code> -&gt; <code class="language-plaintext highlighter-rouge">--info</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_API_ID</code> -&gt; <code class="language-plaintext highlighter-rouge">--api_id</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_API_HASH</code> -&gt; <code class="language-plaintext highlighter-rouge">--api_hash</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_PHONE</code> -&gt; <code class="language-plaintext highlighter-rouge">--phone</code></li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_HIDE_PSWD</code> -&gt; <code class="language-plaintext highlighter-rouge">--hide_pswd</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_BOT_TOKEN</code> -&gt; <code class="language-plaintext highlighter-rouge">--bot</code></li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_LOGOUT</code> -&gt; <code class="language-plaintext highlighter-rouge">--logout</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_SESSION_STRING</code> -&gt; <code class="language-plaintext highlighter-rouge">--login_string</code></li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_EXPORT_STRING</code> -&gt; <code class="language-plaintext highlighter-rouge">--export_string</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_TMP_SESSION</code> -&gt; <code class="language-plaintext highlighter-rouge">--tmp_session</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_LOGIN_ONLY</code> -&gt; <code class="language-plaintext highlighter-rouge">--login_only</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+</ul>
+
+<p><a name="env-3"></a></p>
+
+<p><strong>3.FILE VARS:</strong></p>
+
+<ul>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_PATH</code> -&gt; <code class="language-plaintext highlighter-rouge">--path</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_FILENAME</code> -&gt; <code class="language-plaintext highlighter-rouge">--filename</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_THUMB</code> -&gt; <code class="language-plaintext highlighter-rouge">--thumb</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_CAPTION</code> -&gt; <code class="language-plaintext highlighter-rouge">--caption</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_DURATION</code> -&gt; <code class="language-plaintext highlighter-rouge">--duration</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_CAPJSON</code> -&gt; <code class="language-plaintext highlighter-rouge">--capjson</code></li>
+</ul>
+
+<p><a name="env-4"></a></p>
+
+<p><strong>4.BEHAVIOUR VARS:</strong></p>
+
+<ul>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_CHAT_ID</code> -&gt; <code class="language-plaintext highlighter-rouge">--chat_id</code></li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_AS_PHOTO</code> -&gt; <code class="language-plaintext highlighter-rouge">--as_photo</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_AS_VIDEO</code> -&gt; <code class="language-plaintext highlighter-rouge">--as_video</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_AS_AUDIO</code> -&gt; <code class="language-plaintext highlighter-rouge">--as_audio</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_AS_VOICE</code> -&gt; <code class="language-plaintext highlighter-rouge">--as_voice</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_AS_VIDEO_NOTE</code> -&gt; <code class="language-plaintext highlighter-rouge">--as_video_note</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_SPLIT</code> -&gt; <code class="language-plaintext highlighter-rouge">--split</code></li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_REPLACE</code> -&gt; <code class="language-plaintext highlighter-rouge">--replace</code></td>
+          <td>Separate both values using “,” (comma).</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_DISABLE_STREAM</code> -&gt; <code class="language-plaintext highlighter-rouge">--disable_stream</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_SPOILER</code> -&gt; <code class="language-plaintext highlighter-rouge">--spoiler</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_PARSE_MODE</code> -&gt; <code class="language-plaintext highlighter-rouge">--parse_mode</code></li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_DELETE_ON_DONE</code> -&gt; <code class="language-plaintext highlighter-rouge">--delete_on_done</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_WIDTH</code> -&gt; <code class="language-plaintext highlighter-rouge">--width</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_HEIGHT</code> -&gt; <code class="language-plaintext highlighter-rouge">--height</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_ARTIST</code> -&gt; <code class="language-plaintext highlighter-rouge">--artist</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_TITLE</code> -&gt; <code class="language-plaintext highlighter-rouge">--title</code></li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_SILENT</code> -&gt; <code class="language-plaintext highlighter-rouge">--silent</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_RECURSIVE</code> -&gt; <code class="language-plaintext highlighter-rouge">--recursive</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_PREFIX</code> -&gt; <code class="language-plaintext highlighter-rouge">--prefix</code></li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_NO_WARN</code> -&gt; <code class="language-plaintext highlighter-rouge">--no_warn</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+  <li>
+    <table>
+      <tbody>
+        <tr>
+          <td><code class="language-plaintext highlighter-rouge">TG_UPLOAD_NO_UPDATE</code> -&gt; <code class="language-plaintext highlighter-rouge">--no_update</code></td>
+          <td>True or False.</td>
+        </tr>
+      </tbody>
+    </table>
+  </li>
+</ul>
+
+<p><a name="env-5"></a></p>
+
+<p><strong>5.MISC VARS:</strong></p>
+
+<ul>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_DEVICE_MODEL</code> -&gt; <code class="language-plaintext highlighter-rouge">--device_model</code></li>
+  <li><code class="language-plaintext highlighter-rouge">TG_UPLOAD_SYSTEM_VERSION</code> -&gt; <code class="language-plaintext highlighter-rouge">--system_version</code></li>
+</ul>
+
+<p>No need to set all of the listed variables at once, you can set any of them in any order. Remember, passing any flag will temporary overwrite its associated variable (if any).</p>
+
 <p><a name="limits"></a></p>
 
 <h2 id="-limits">🪧 Limits</h2>
@@ -535,7 +801,7 @@ pkg install git -y
 
 <h2 id="️-credits--thanks">❤️ Credits &amp; Thanks</h2>
 
-<p><a href="https://t.me/TheCaduceusHere"><strong>Dr.Caduceus</strong></a>: Owner &amp; current maintainer of tg-upload.</p>
+<p><a href="https://t.me/TheCaduceusHere"><strong>Dr.Caduceus</strong></a>: Owner &amp; developer of tg-upload.</p>
       
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
