--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ pkg install git -y
 --split_file - Split file in given bytes, accepts only size &amp; requires path using path flag.
 --combine - Restore original file using part files produced by tg-upload. Accepts one or more paths.
 --convert - Convert any image into JPEG format.
---frame - Captue a frame from a video file at given time &amp; save as .jpg file, accepts only time (in seconds) &amp; video file path using path flag.
+--frame - Capture a frame from a video file at given time &amp; save as .jpg file, accepts only time (in seconds) &amp; video file path using path flag.
 </code></pre></div></div>
 
 <p><a name="flag-7"></a></p>
@@ -684,7 +684,7 @@ pkg install git -y
 <img src="https://user-images.githubusercontent.com/87380104/233824278-eed11926-1748-4455-8cb0-cb2cf1ebcdbd.png" />
 
 </div>
-<p>Just like a plan text, you can also apply same formatting on variables, just make sure you put all formatting tags outside of {} brackets to prevent any error.</p>
+<p>Just like a plan text, you can also apply same formatting on variables, make sure you put all formatting tags outside of {} brackets to prevent any error.</p>
 
 <p>One variable can be called multiple times in same caption and user must prevent writing any other keyword between {} otherwise tg-upload will raise KeyError indicating that given variable is not yet defined.</p>
 
